--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "resend": "^6.6.0",
     "typescript": "^5.9.3",
     "zod": "^4.1.13"
   },
